--- a/alanlib_ita/lib_verbi.asciidoc
+++ b/alanlib_ita/lib_verbi.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Verbi
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.17-Alpha, 2018-11-03: Alan 3.0beta6
+v0.7.18-Alpha, 2018-11-03: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_verbs.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -209,34 +209,24 @@ Altresì noti come _comandi extradiegetici_.
 Questo gruppo include i verbi che riguardano il salvataggio ed il carimento
 della partita.
 
-// end::gruppo_file[]
-// tag::verbo_carica_partita[]
 ==== carica_partita
 
-// end::verbo_carica_partita[]
-// tag::verbo_salva_partita[]
 ==== salva_partita
 
-// end::verbo_salva_partita[]
+// end::gruppo_file[]
 // tag::gruppo_trascrizione[]
 === Trascrizione
 
 Questo gruppo include i verbi che controllano l'avvio e l'arresto della
 trascrizione della partita su un file di log.
 
-// end::gruppo_trascrizione[]
-// tag::verbo_trascrizione[]
 ==== trascrizione
 
-// end::verbo_trascrizione[]
-// tag::verbo_trascrizione_on[]
 ==== trascrizione_on
 
-// end::verbo_trascrizione_on[]
-// tag::verbo_trascrizione_off[]
 ==== trascrizione_off
 
-// end::verbo_trascrizione_off[]
+// end::gruppo_trascrizione[]
 // tag::gruppo_punteggio[]
 === Punteggio e Notifiche
 
@@ -248,23 +238,15 @@ della partita:
 * `notifica_on`
 * `notifica_off`
 
-// end::gruppo_punteggio[]
-// tag::verbo_vedi_punteggio[]
 ==== vedi_punteggio
 
-// end::verbo_vedi_punteggio[]
-// tag::verbo_notifica[]
 ==== notifica
 
-// end::verbo_notifica[]
-// tag::verbo_notifica_on[]
 ==== notifica_on
 
-// end::verbo_notifica_on[]
-// tag::verbo_notifica_off[]
 ==== notifica_off
 
-// end::verbo_notifica_off[]
+// end::gruppo_punteggio[]
 // tag::gruppo_verbosity[]
 === Descrizioni Brevi e Lunghe
 
@@ -274,34 +256,24 @@ modalità: breve e lunga.
 * `modalità_breve`
 * `modalità_lunga`
 
-// end::gruppo_verbosity[]
-// tag::verbo_modalita_breve[]
 ==== modalità_breve
 
-// end::verbo_modalita_breve[]
-// tag::verbo_modalita_lunga[]
 ==== modalità_lunga
 
-// end::verbo_modalita_lunga[]
+// end::gruppo_verbosity[]
 // tag::gruppo_misc_meta[]
 === Meta Verbi Vari
 
 Qui di seguito sono elencati i vari meta verbi che non rientrano in alcun
 gruppo specifico.
 
-// end::gruppo_misc_meta[]
-// tag::verbo_abbandona_partita[]
 ==== abbandona_partita
 
-// end::verbo_abbandona_partita[]
-// tag::verbo_ricomincia_partita[]
 ==== ricomincia_partita
 
-// end::verbo_ricomincia_partita[]
-// tag::verbo_ringraziamenti[]
 ==== ringraziamenti
 
-// end::verbo_ringraziamenti[]
+// end::gruppo_misc_meta[]
 // tag::comandi_gioco[]
 
 == Verbi di Gioco
@@ -319,15 +291,11 @@ luce e dispositivi:
 * `accendi`
 * `spegni`
 
-// end::gruppo_accendi[]
-// tag::verbo_accendi[]
 ==== accendi
 
-// end::verbo_accendi[]
-// tag::verbo_spegni[]
 ==== spegni
 
-// end::verbo_spegni[]
+// end::gruppo_accendi[]
 // tag::gruppo_apri[]
 === Apertura e Chiusura
 
@@ -339,32 +307,26 @@ Questo gruppo include i verbi per aprire, chiudere e bloccare:
 * `blocca_con`
 * `chiudi`
 * `chiudi_con`
+* `sblocca`
+* `sblocca_con`
 
-// end::gruppo_apri[]
-// tag::verbo_apri[]
 ==== apri
 
-// end::verbo_apri[]
-// tag::verbo_apri_con[]
 ==== apri_con
 
-// end::verbo_apri_con[]
-// tag::verbo_blocca[]
 ==== blocca
 
-// end::verbo_blocca[]
-// tag::verbo_blocca_con[]
 ==== blocca_con
 
-// end::verbo_blocca_con[]
-// tag::verbo_chiudi[]
 ==== chiudi
 
-// end::verbo_chiudi[]
-// tag::verbo_chiudi_con[]
 ==== chiudi_con
 
-// end::verbo_chiudi_con[]
+==== sblocca
+
+==== sblocca_con
+
+// end::gruppo_apri[]
 // tag::gruppo_sensi[]
 === Azioni Sensoriali
 
@@ -385,31 +347,19 @@ Il verbo `annusa` è anche definito in `lib_classi.i` sulla classe `suono`
 (per rispondere che i suoni non sono qualcosa che si possa annusare).
 ============================================================================
 
-// end::gruppo_sensi[]
-// tag::verbo_annusa0[]
 ==== annusa0
 
-// end::verbo_annusa0[]
-// tag::verbo_annusa[]
 ==== annusa
 
-// end::verbo_annusa[]
-// tag::verbo_ascolta0[]
 ==== ascolta0
 
-// end::verbo_ascolta0[]
-// tag::verbo_ascolta[]
 ==== ascolta
 
-// end::verbo_ascolta[]
-// tag::verbo_tocca[]
 ==== tocca
 
-// end::verbo_tocca[]
-// tag::verbo_tocca_con[]
 ==== tocca_con
 
-// end::verbo_tocca_con[]
+// end::gruppo_sensi[]
 // tag::gruppo_conversare[]
 === Conversare
 
@@ -433,39 +383,23 @@ PNG (chiedere per avere, anziché per sapere). Per ora li lascio qui, finché
 non decido in quale gruppo spostarli.
 ============================================================================
 
-// end::gruppo_conversare[]
-// tag::verbo_chiedi[]
 ==== chiedi
 
-// end::verbo_chiedi[]
-// tag::verbo_dire[]
 ==== dì
 
-// end::verbo_dire[]
-// tag::verbo_dire_a[]
 ==== dì_a
 
-// end::verbo_dire_a[]
-// tag::verbo_domanda[]
 ==== domanda
 
-// end::verbo_domanda[]
-// tag::verbo_parla[]
 ==== parla
 
-// end::verbo_parla[]
-// tag::verbo_parla_con[]
 ==== parla_con
 
-// end::verbo_parla_con[]
-// tag::verbo_racconta[]
 ==== racconta
 
-// end::verbo_racconta[]
-// tag::verbo_rispondi[]
 ==== rispondi
 
-// end::verbo_rispondi[]
+// end::gruppo_conversare[]
 // tag::gruppo_mangiabevi[]
 === Mangiare e Bere
 
@@ -487,27 +421,17 @@ Questo gruppo include i verbi che riguardano mangiare e bere:
 | sorseggia | sorseggia (liq) | liq è `potabile`
 |================================================================
 
-// end::gruppo_mangiabevi[]
-// tag::verbo_assaggia[]
 ==== assaggia
 
-// end::verbo_assaggia[]
-// tag::verbo_bevi[]
 ==== bevi
 
-// end::verbo_bevi[]
-// tag::verbo_mangia[]
 ==== mangia
 
-// end::verbo_mangia[]
-// tag::verbo_mordi[]
 ==== mordi
 
-// end::verbo_mordi[]
-// tag::verbo_sorseggia[]
 ==== sorseggia
 
-// end::verbo_sorseggia[]
+// end::gruppo_mangiabevi[]
 // tag::gruppo_svuota[]
 === Svuotare e Versare
 
@@ -530,19 +454,136 @@ Questa è la ragione per cui in `lib_classi.i` questi verbi sono ridefiniti
 nella classe `liquido` affinché si possa utilizzare il verbo `versa` con un
 liquido ma non il verbo `svuota`.
 
-// end::gruppo_svuota[]
-// tag::verbo_svuota[]
 ==== svuota + versa
 
-// end::verbo_svuota[]
-// tag::verbo_svuota_in[]
 ==== svuota_in + versa_in
 
-// end::verbo_svuota_in[]
-// tag::verbo_svuota_su[]
 ==== svuota_su + versa_su
 
-// end::verbo_svuota_su[]
+// end::gruppo_svuota[]
+// tag::gruppo_guarda[]
+=== Guardare ed Esaminare
+
+Questo gruppo raccoglie i verbi '`eamina`' e '`guarda`', con le loro varianti:
+
+* `esamina`
+* `guarda`
+* `guarda_attraverso`
+* `guarda_dietro`
+* `guarda_fuori_da`
+* `guarda_in`
+* `guarda_sotto`
+* `guarda_su`
+
+Verbi di questo gruppo non ancora tradotti:
+
+* `search` (non sono certo se appartenga a questo gruppo o meno)
+
+==== esamina
+
+Se l'oggetto esaminato è `leggibile` e l'attributo `xDesc` è una stringa
+vuota, allora `esamina` si comporterà come il verbo `leggi` e mostrerà il
+contenuto del'attributo `testo`. Se invece la `xDesc` dell'oggetto contiene
+del testo, allora `esamina` lo tratterà come qualsiasi altro oggetto e
+mostrerà il testo di `xDesc`.
+
+Questo comportamento è stato modificato rispetto alla libreria originale
+inglese, dove `esamina` si comportava sempre come `leggi` in presenza
+dell'attributo `leggibile`. Questa modifica è stata apportata al fine di
+consentire all'autore di rendere un oggetto leggibile anche esaminabile --
+p.es. se creiamo un antico libro magico, ci piacerebbe che esaminandolo il
+giocatore possa ottenere una descrizione del manufatto ("`Un manoscritto
+rilegato in pelle, sembra molto antico.`") al fine di rafforzare l'atmosfera
+del gioco e valorizzare l'oggetto.
+
+Qualora non fosse importante fornire una descrizione dell'oggetto (p.es.
+un semplice post-it o un foglio di carta) e si preferisse che esaminare
+l'oggetto equivalesse a leggerlo, sarà sufficiente non fornire all'oggetto
+l'attributo `xDesc` (che di default è una stringa vuota).
+
+==== guarda
+
+==== guarda_attraverso
+
+==== guarda_dietro
+
+==== guarda_fuori_da
+
+==== guarda_in
+
+==== guarda_sotto
+
+==== guarda_su
+
+// end::gruppo_guarda[]
+// tag::gruppo_commercio[]
+=== Commerciare
+
+Questo gruppo include i verbi per la compravendita:
+
+* `compra`
+* `vendi`
+
+
+==== compra
+
+==== vendi
+
+// end::gruppo_commercio[]
+// tag::gruppo_rompi_aggiusta[]
+=== Rompere ed Aggiustare
+
+Questo gruppo include i verbi per danneggiare o riparare cose:
+
+
+Verbi di questo gruppo non ancora tradotti:
+
+* `ripara`
+* `rompi`
+* `rompi_con`
+
+==== ripara
+
+==== rompi
+
+==== rompi_con
+
+// end::gruppo_rompi_aggiusta[]
+// tag::gruppo_dare[]
+=== Dare e Prendere
+
+Questo gruppo riguarda i verbi per dare, prendere e lasciare oggetti:
+
+* `dai_a`
+* `lascia`
+* `prendi`
+* `prendi_da`
+
+==== dai_a
+
+==== lascia
+
+==== prendi
+
+==== prendi_da
+
+// end::gruppo_dare[]
+// tag::gruppo_vestirsi[]
+=== Vestirsi e Svestirsi
+
+Questo gruppo raccoglie i verbi riguardanti il vestiario e denudarsi:
+
+* `indossa`
+* `togliti`
+* `spogliati`
+
+==== indossa
+
+==== togliti
+
+==== spogliati
+
+// end::gruppo_vestirsi[]
 // tag::comandi_domande[]
 
 == Verbi di Domande
@@ -680,6 +721,10 @@ Finisci di trasformare commenti in documentazione Doxter:
 
 * [ ] Descrizione `chiudi_con`.
 
+* [ ] Descrizione `sblocca`.
+
+* [ ] Descrizione `sblocca_con`.
+
 * [ ] Descrizione `annusa0`.
 
 * [ ] Descrizione `annusa`.
@@ -723,6 +768,46 @@ Finisci di trasformare commenti in documentazione Doxter:
 * [ ] Descrizione `svuota_in` + `versa_in`.
 
 * [ ] Descrizione `svuota_su` + `versa_su`.
+
+* [x] Descrizione `esamina` (da completare).
+
+* [ ] Descrizione `guarda`.
+
+* [ ] Descrizione `guarda_attraverso`.
+
+* [ ] Descrizione `guarda_dietro`.
+
+* [ ] Descrizione `guarda_fuori_da`.
+
+* [ ] Descrizione `guarda_in`.
+
+* [ ] Descrizione `guarda_sotto`.
+
+* [ ] Descrizione `guarda_su`.
+
+* [ ] Descrizione `compra`.
+
+* [ ] Descrizione `vendi`.
+
+* [ ] Descrizione `ripara`.
+
+* [ ] Descrizione `rompi`.
+
+* [ ] Descrizione `rompi_con`.
+
+* [ ] Descrizione `dai_a`.
+
+* [ ] Descrizione `lascia`.
+
+* [ ] Descrizione `prendi`.
+
+* [ ] Descrizione `prendi_da`.
+
+* [ ] Descrizione `indossa`.
+
+* [ ] Descrizione `togliti`.
+
+* [ ] Descrizione `spogliati`.
 
 // end::todo_checklist[]
 
